force-app/main/default/objects/ssot__FundingAwardRequirement__dlm/fields/ssot__AssignedContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignedContactId__c</fullName>
    <label>Assigned Contact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignedContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>