force-app/main/default/objects/ssot__FundingAwardRequirement__dlm/fields/ssot__DueDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__DueDateTime__c</fullName>
    <label>Due Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DueDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>