force-app/main/default/objects/ssot__FundingAwardRequirement__dlm/fields/ssot__FundingAwardReqStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__FundingAwardReqStatus__c</fullName>
    <label>Funding Award Requrement Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FundingAwardReqStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>