force-app/main/default/objects/ssot__FundingAwardRequirement__dlm/fields/ssot__IsSubmitted__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsSubmitted__c</fullName>
    <label>Is Submitted</label>
    <length>6</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsSubmitted</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>