force-app/main/default/objects/ssot__FundingAwardRequirement__dlm/fields/ssot__rel_1716726628472_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726628472_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAwardRequirement_AssignedUser_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>FundingAwardRequirement_AssignedUser_rel</relationshipLabel>
    <relationshipName>rel_1716726628472_end</relationshipName>
    <type>Lookup</type>
</CustomField>