force-app/main/default/objects/ssot__FundingAwardRequirement__dlm/fields/ssot__rel_1716726629875_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726629875_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAwardRequirement_FundingAward_rel</label>
    <referenceTo>ssot__FundingAward__dlm</referenceTo>
    <relationshipLabel>FundingAwardRequirement_FundingAward_rel</relationshipLabel>
    <relationshipName>rel_1716726629875_end</relationshipName>
    <type>Lookup</type>
</CustomField>