force-app/main/default/objects/ssot__FundingAwardRequirement__dlm/fields/ssot__rel_1718544753739_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718544753739_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAwardRequirement_AssignedCont_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>FundingAwardRequirement_AssignedCont_rel</relationshipLabel>
    <relationshipName>rel_1718544753739_end</relationshipName>
    <type>Lookup</type>
</CustomField>